# minsurf

./: CMakeLists.txt  CMakeSettings.json  README.md  config.txt  config_example.txt
minsurface/: CMakeLists.txt  DISCRETIZATIONS.h  DISCRETIZATION_CORE.h  INTERPRETER.h  SYSTEM_MATRIX_CORE.h  TOKEN.h  config.txt  main.cpp  minsurface.cpp  minsurface.h
src/: DERIVATIVE_CORE.h  DISCRETIZATIONS.h  DISCRETIZATION_CORE.h  INTERPRETER.h  RESIDUAL_CORE.h  main.cpp
