# CMakeList.txt: CMake-Projekt für "minsurface". Schließen Sie die Quelle ein, und definieren Sie
# projektspezifische Logik hier.
#
cmake_minimum_required (VERSION 3.8)

# Fügen Sie der ausführbaren Datei für dieses Projekt eine Quelle hinzu.
add_executable (minsurface "minsurface.cpp" "minsurface.h")

# TODO: Fügen Sie bei Bedarf Tests und Installationsziele hinzu.
